# SaRA

./: README.md
ReachLib/: CMakeLists.txt
ReachLib/include/: aabb.hpp  articulated.hpp  articulated_accel.hpp  articulated_combined.hpp  articulated_pos.hpp  articulated_vel.hpp  body_part.hpp  body_part_accel.hpp  body_part_combined.hpp  body_part_vel.hpp  capsule.hpp  cylinder.hpp  cylinder_perimeter.hpp  extremity.hpp  intersections.hpp  obstacle.hpp  occupancy.hpp  occupancy_container.hpp  pedestrian.hpp  pedestrian_accel.hpp  pedestrian_vel.hpp  point.hpp  reach_lib.hpp  sphere.hpp  system.hpp
ReachLib/src/: articulated.cpp  articulated_accel.cpp  articulated_combined.cpp  articulated_pos.cpp  articulated_vel.cpp  body_part.cpp  body_part_accel.cpp  body_part_combined.cpp  body_part_vel.cpp  capsule.cpp  cylinder.cpp  cylinder_perimeter.cpp  extremity.cpp  intersections.cpp  occupancy.cpp  pedestrian.cpp  pedestrian_accel.cpp  pedestrian_vel.cpp  point.cpp  sphere.cpp  system.cpp
ReachLib/tests/include/: body_part_combined_fixture.h
ReachLib/tests/src/: body_part_combined_tests.cc
executables/: reachable_occupancy
experiments/: SaRA_demo  SaRA_demo.launch  exp_appraoching.bag  exp_box.bag  exp_headbutt.bag  exp_punch.bag
reach_lib/doc/: Doxyfile
reach_lib/include/: articulated_pos.hpp  cylinder.hpp  occupancy_container.hpp  pedestrian.hpp  pedestrian_accel.hpp  point.hpp  reach_lib.hpp
reach_lib/src/: articulated_accel.cpp  articulated_vel.cpp  body_part.cpp  body_part_accel.cpp  extremity.cpp  pedestrian_vel.cpp
reachable_occupancy/: CMakeLists.txt  package.xml
reachable_occupancy/config/: reachable_occupancy.yaml
reachable_occupancy/include/ReachLib/include/: articulated.hpp  articulated_accel.hpp  articulated_pos.hpp  articulated_vel.hpp  body_part.hpp  body_part_accel.hpp  body_part_vel.hpp  capsule.hpp  cylinder_perimeter.hpp  extremity.hpp  intersections.hpp  obstacle.hpp  occupancy.hpp  occupancy_container.hpp  pedestrian.hpp  pedestrian_vel.hpp  point.hpp  reach_lib.hpp  sphere.hpp  system.hpp
reachable_occupancy/include/ReachLib/src/: articulated.cpp  articulated_accel.cpp  articulated_pos.cpp  articulated_vel.cpp  body_part_accel.cpp  body_part_vel.cpp  capsule.cpp  cylinder.cpp  cylinder_perimeter.cpp  extremity.cpp  intersections.cpp  occupancy.cpp  pedestrian.cpp  pedestrian_accel.cpp  pedestrian_vel.cpp  point.cpp  sphere.cpp  system.cpp
reachable_occupancy/include/reach_lib/: CMakeLists.txt
reachable_occupancy/include/reach_lib/include/: capsule.hpp
reachable_occupancy/include/reach_lib/src/: cylinder.cpp  pedestrian.cpp  sphere.cpp
reachable_occupancy/include/reachable_occupancy/: receiver.hpp  udp_transiever.hpp  validation.hpp  visualizer.hpp  volume.hpp
reachable_occupancy/launch/: SaRA_demo.launch  reach_ri.launch  reachable_occupancy.launch  test.launch  test_run.launch  udp.launch  udp_translation.launch
reachable_occupancy/msg/: Capsule.msg  CapsuleArray.msg  Cylinder.msg  CylinderArray.msg  JointLocations.msg  ReachableOccupancy.msg  time.msg
reachable_occupancy/rviz/: cmu_demo_for_images.rviz  ro_config_basic.rviz  ro_config_no-angle.rviz  ro_rl_demo.rviz
reachable_occupancy/rviz/meshes/: cofee_table.stl  coffee_table.dae  door.stl  room.dae  rum.dae  table.dae
reachable_occupancy/src/: SaRA_demo.cpp  demo_publisher.cpp  reach_ri.cpp  reach_test.cpp  reachable_occupancy.cpp  reachable_occupancy_no_udp.cpp  receiver.cpp  skeleton_publisher.py  udp_receiver.cpp  udp_transiever.cpp  udp_translator.cpp  validation.cpp  visualizer.cpp  volume.cpp
reachable_occupancy/src/tests/: demo_publisher_non_ros.cpp  simple_skeleton_mvmt.csv
